Add author info

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Techman/sms-game.git"
   },
-  "author": "",
+  "author": "Michael Hazell",
   "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/Techman/sms-game/issues"
